[package]
name = "stars"
version = "0.1.0"
authors = ["Zeeshan Lakhani <zeeshan_lakhani@comcast.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "0.2", features = ["full"] }
